WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
219306
Non-unified build fixes, late November 2020 edition
https://bugs.webkit.org/show_bug.cgi?id=219306
Summary
Non-unified build fixes, late November 2020 edition
Adrian Perez
Reported
2020-11-27 06:28:24 PST
It's beginning to look a lot like Christmas Everywhere you go; Take a look at the five and ten It's glistening once again With candy canes and silver lanes aglow 🎄️🍬️
Attachments
Patch
(10.12 KB, patch)
2020-11-27 07:21 PST
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2020-11-27 07:21:50 PST
Created
attachment 414942
[details]
Patch
EWS
Comment 2
2020-11-27 09:26:27 PST
Committed
r270197
: <
https://trac.webkit.org/changeset/270197
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414942
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-11-27 09:27:17 PST
<
rdar://problem/71766106
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug