Non-unified build fixes, late November 2020 edition https://bugs.webkit.org/show_bug.cgi?id=219306

Unreviewed non-unified build fixes.


Source/WebCore:

* dom/SimpleRange.cpp: Add missing Frame.h header.
* html/canvas/CanvasRenderingContext2D.cpp: Removed fontStyleIsWithinRange() from here, as
it is not used in this source file.
* html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::isSpaceThatNeedsReplacing): Moved here from CanvasRenderingContext2D.cpp
* inspector/InspectorNodeFinder.cpp: Add missing Frame.h header.
* page/FrameTree.h: Added missing wtf/Forward.h header
* style/StyleResolveForFontRaw.cpp: Add missing CSSToLengthConversionData.h,
FontCascade.h, and Settings.h headers.
* style/StyleResolveForFontRaw.h: Add forward declaration for FontCascadeDescription.

Source/WebKit:

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp: Add missing
PrivateClickMeasurementManager.h header.
* NetworkProcess/PrivateClickMeasurementManager.cpp: Add missing NetworkSession.h header.
* UIProcess/SpeechRecognitionServer.cpp:
(WebKit::SpeechRecognitionServer::handleRequest): Add missing WebCore:: namespace to uses
of the WebCore::SpeechRecognizer and WebCore::SpeechRecognitionUpdateType types.


Canonical link: https://commits.webkit.org/231906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270197 268f45cc-cd09-0410-ab3c-d52691b4dbfc