Source/WebCore/dom/SimpleRange.cpp
@@ -27,6 +27,7 @@
 #include "SimpleRange.h"
 
 #include "CharacterData.h"
+#include "Frame.h"
 #include "HTMLFrameOwnerElement.h"
 #include "NodeTraversal.h"
 #include "ShadowRoot.h"
