Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp
@@ -2428,6 +2428,17 @@ bool CanvasRenderingContext2DBase::canDrawTextWithParams(float x, float y, bool 
     return true;
 }
 
+static inline bool isSpaceThatNeedsReplacing(UChar c)
+{
+    // According to specification all space characters should be replaced with 0x0020 space character.
+    // http://www.whatwg.org/specs/web-apps/current-work/multipage/the-canvas-element.html#text-preparation-algorithm
+    // The space characters according to specification are : U+0020, U+0009, U+000A, U+000C, and U+000D.
+    // http://www.whatwg.org/specs/web-apps/current-work/multipage/common-microsyntaxes.html#space-character
+    // This function returns true for 0x000B also, so that this is backward compatible.
+    // Otherwise, the test LayoutTests/canvas/philip/tests/2d.text.draw.space.collapse.space.html will fail
+    return c == 0x0009 || c == 0x000A || c == 0x000B || c == 0x000C || c == 0x000D;
+}
+
 void CanvasRenderingContext2DBase::normalizeSpaces(String& text)
 {
     size_t i = text.find(isSpaceThatNeedsReplacing);
